task-3/e_ip.tf
resource "aws_eip" "eip" {
    vpc     =       true
    tags    =       "${var.tags}"
}
